# lwvid

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/lwvid/: lw_avreader.hpp  lwvid.h  lwvid.hpp  utils.hpp
src/: lw_avreader.cpp  main.cpp
